# JobHunter

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
scraper/: Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  scrape.py
scraper/scrapers/: __init__.py  adzuna.py  arbeitnow.py  base.py  devitjobs.py  glassdoor.py  greenhouse.py  himalayas.py  indeed.py  jobbank.py  jobicy.py  jooble.py  lever.py  linkedin.py  rapidapi.py  remotive.py  themuse.py  workday.py
web/: .env.example  PYTHON-REWRITE-PLAN.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json
web/public/: robots.txt  site.webmanifest  sw.js
web/scripts/: verify-ats.ts
web/src/app/: error.tsx  layout.tsx  loading.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
web/src/app/saved/: page.tsx
web/src/app/scraper-health/: page.tsx
web/src/components/: ServiceWorkerRegistrar.tsx
web/src/components/auth/: UserMenu.tsx
web/src/hooks/: useAISummary.ts  useKeyboardNav.ts  useUrlFilters.ts
web/src/lib/: auth.ts  autocomplete-data.ts  career-discovery.ts  city-filter.ts  country-filter.ts  dream-match.ts  format-description.ts  match-scoring.test.ts  match-scoring.ts  pdf-extract.ts  rate-limit.ts  resume-extract.ts  salary-parser.test.ts  salary-parser.ts  schema.sql  session.ts  skills-extractor.test.ts  skills-extractor.ts  synonyms.ts  types.ts  utils.test.ts  utils.ts
web/src/styles/: globals.css
web/src/types/: next-auth.d.ts  react-popover.d.ts
wiki/: index.md  log.md
wiki/context/: stack.md
(+122 files in other folders)
