[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobhunter-scraper"
version = "1.0.0"
description = "Local scraper for JobHunter — scrapes job boards and uploads results to the JobHunter API."
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[project.scripts]
jobhunter-scrape = "scrape:main"

[tool.setuptools]
py-modules = ["scrape"]
packages = ["scrapers"]
